src/styles/global.css
@import url("https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap");

:root {
  --pagefind-ui-scale: 1;
  --pagefind-ui-primary: #3d4ff5;
  --pagefind-ui-text: #393939;
  --pagefind-ui-background: #f6fafd;
  --pagefind-ui-border: #eeeeee;
  --pagefind-ui-tag: #eeeeee;
  --pagefind-ui-border-width: 2px;
  --pagefind-ui-border-radius: 8px;
  --pagefind-ui-image-border-radius: 8px;
  --pagefind-ui-image-box-ratio: 2 / 1;
  --pagefind-ui-font: sans-serif;
}

* {
  font-family: "Onest";
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

html {
  box-sizing: border-box;
  scroll-behavior: smooth;
  background-color: white;
  color: #111827;
}

html.dark {
  background-color: black;
  color: #fafafa;
  --pagefind-ui-primary: #b2c6fe;
  --pagefind-ui-text: #eeeeee;
  --pagefind-ui-background: #242424;
  --pagefind-ui-border: #242424;
  --pagefind-ui-tag: #242424;
}

body {
  display: block;
  margin: 0 auto;
  min-height: 100vh;
  overflow-x: hidden;
  width: 100%;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.pagefind-ui__drawer {
  /*  results of search  */
  background-color: white;
  z-index: 10;
}

html.dark .pagefind-ui__drawer {
  background-color: black;
}

#search {
  .pagefind-ui__search-input {
    height: 35px;
    width: 352px;
    font-size: 14px;
  }

  mark {
    /* subrayado de las coincidencias */
    background-color: #b4a6ff;
  }
}

